template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  MediaFlowSub:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:   10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MediaFlowSub
  PocSub:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MediaFlowSub
      CidrBlock:   10.0.1.0/24
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PocSub
  PocSubIG:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: PocSubIG
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MediaFlowSub
      InternetGatewayId: !Ref PocSubIG
  PocSubRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MediaFlowSub
      Tags:
        - Key: Name
          Value: PocSubRT
  PocSubRTA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PocSub
      RouteTableId: !Ref PocSubRT
  PocSubRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PocSubRT
      DestinationCidrBlock:   0.0.0.0/0
      GatewayId: !Ref PocSubIG
  PocSubSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all inbound traffic
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort:   514
          ToPort:   514
          CidrIp:   0.0.0.0/0
      VpcId: !Ref MediaFlowSub
      Tags:
        - Key: Name
          Value: PocSubSG
  PocSubNLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: network
      Subnets:
        - !Ref PocSub
      Tags:
        - Key: Name
          Value: PocSubNLB
  PocSubTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds:   30
      HealthCheckTimeoutSeconds:   5
      HealthyThresholdCount:   3
      UnhealthyThresholdCount:   3
      Port:   514
      Protocol: UDP
      VpcId: !Ref MediaFlowSub
      Tags:
        - Key: Name
          Value: PocSubTG
  PocSubListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !GetAtt PocSubTG.TargetGroupArn
      LoadBalancerArn: !GetAtt PocSubNLB.LoadBalancerArn
      Port:   514
      Protocol: UDP
  PocSubTD:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: PocSubTD
      ContainerDefinitions:
        - Name: PocSubContainer
          Image:   410677554255.dkr.ecr.us-east-1.amazonaws.com/PocSubtitulos:latest
          Memory:   4096
          Cpu:   2048
          PortMappings:
            - ContainerPort:   514
              Protocol: udp
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      ExecutionRoleArn: arn:aws:iam::410677554255:role/ecsTaskExecutionRole
  PocSubCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: PocSubCluster
  PocSubService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref PocSubCluster
      DesiredCount:   1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PocSub
          SecurityGroups:
            - !Ref PocSubSG
      TaskDefinition: !Ref PocSubTD
      LoadBalancers:
        - TargetGroupArn: !GetAtt PocSubTG.TargetGroupArn
          ContainerName: PocSubContainer
          ContainerPort:   514
